tests/baselines/reference/thisInSuperCall.errors.txt
==== tests/cases/compiler/thisInSuperCall.ts (2 errors) ====
    class Base { 
        constructor(x: any) {}
    }
    
    class Foo extends Base {
        constructor() {
            super(this); // no error
        }
    }
    
    class Foo2 extends Base {
        public p = 0;
        constructor() {
            super(this); // error
                  ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
        }
    }
    
    class Foo3 extends Base {
        constructor(public p) {
            super(this); // error
                  ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
        }
    }